added the working link in the html file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!-- View the working of my project at -> https://imyogeshgaur.github.io/rainbow_circle_in_canvas -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FireWork in Canvas</title>
+    <title>Rainbow Circles in Canvas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
